# remove-ai-watermarks

./: .gitignore  CLAUDE.md  README.md  maintain.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: distribute.yml  publish.yml
cloudflare/metadata-cleaner/: _headers  index.html
docs/: controlnet-removal-pipeline-research.md  known-limitations.md  module-internals.md  synthid-robust-identity-research.md  synthid.md  text-protection-research.md  watermarking-landscape.md
scripts/: invisible_quality_audit.py
src/remove_ai_watermarks/: __init__.py  cli.py  doubao_engine.py  humanizer.py  identify.py  instantid_restore.py  invisible_engine.py  invisible_watermark.py  jimeng_engine.py  metadata.py  optional_deps.py  photomaker_restore.py  pill_engine.py  region_eraser.py  trustmark_detector.py  upscaler.py  watermark_registry.py  webui.py
src/remove_ai_watermarks/noai/: c2pa.py  constants.py  img2img_runner.py  isobmff.py  watermark_remover.py
src/remove_ai_watermarks/noai/ctrlregen/: engine.py
tests/: test_doubao_engine.py  test_humanizer.py  test_identify.py  test_invisible_engine.py  test_metadata.py  test_noai.py  test_optional_deps.py  test_photomaker_restore.py  test_pill_engine.py  test_platform.py  test_region_eraser.py  test_trustmark_detector.py  test_watermark_registry.py  test_webui.py
